--- a/indext.html
+++ b/indext.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to the Recipe Generator</h1>
+    <footer>This AI project is coded by <a href="https://github.com/nataliarodmo" target="_blank"> Natalia R</a> and it is <a href="https://github.com/nataliarodmo/fun-facts-generator.git" target="_blank">open-sourced on Github </a> and it is hosted on Netlify </footer>
     <script src="src/index.js"></script>
 </body>
 </html>
