Removed the CS and Added basic HTML

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
-    <title>AI Recipe Generator </title>
+    <title>Fun fact Generator </title>
 </head>
 <body>
-    <h1>Welcome to the Recipe Generator</h1>
+    <header>
+    <h1>AI Fun Fact Generator</h1>
+    </header>
+    <main>
+        <form action="">
+            <input type="text" 
+            placeholder="Enter the ptopic of the Fact" 
+            autofocus 
+            required
+            autocomplete="off">
+            <input type="submit" >
+        </form>
+        <div>
+            Fact will be header
+            <br>
+            second paragraph
+        </div>
+    </main>
     <footer>This AI project is coded by <a href="https://github.com/nataliarodmo" target="_blank"> Natalia R</a> and it is <a href="https://github.com/nataliarodmo/fun-facts-generator.git" target="_blank">open-sourced on Github </a> and it is hosted on <a href="https://ai-fun-fact-generator-natalia-r.netlify.app/" target="_blank"> Netlify </a></footer>
     <script src="src/index.js"></script>
 </body>
