--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>Fun fact Generator </title>
 </head>
 <body>
@@ -12,19 +13,16 @@
     <h1>AI Fun Fact Generator</h1>
     </header>
     <main>
-        <form action="">
+        <form action="" id="fact-generator-form">
             <input type="text" 
-            placeholder="Enter the ptopic of the Fact" 
+            placeholder="Enter the topic of the Fact" 
             autofocus 
             required
             autocomplete="off"
             class="instructions">
             <input type="submit" class="submit-button">
         </form>
-        <div class="fun-fact">
-            Fact will be header
-            <br>
-            second paragraph
+        <div class="fun-fact" id="fun-fact">
         </div>
     </main>
     <footer>This AI project is coded by <a href="https://github.com/nataliarodmo" target="_blank"> Natalia R</a> and it is <a href="https://github.com/nataliarodmo/fun-facts-generator.git" target="_blank">open-sourced on Github </a> and it is hosted on <a href="https://ai-fun-fact-generator-natalia-r.netlify.app/" target="_blank"> Netlify </a></footer>
