--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <title>Fun fact Generator </title>
 </head>
@@ -19,7 +20,8 @@
             autofocus 
             required
             autocomplete="off"
-            class="instructions">
+            class="instructions"
+            id="user-instructions">
             <input type="submit" class="submit-button">
         </form>
         <div class="fun-fact" id="fun-fact">
