--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <form action="" id="fact-generator-form">
             <input type="text" 
-            placeholder="Enter the topic of the Fact" 
+            placeholder="Enter the topic of a fact you would like to generate" 
             autofocus 
             required
             autocomplete="off"
@@ -24,7 +24,7 @@
             id="user-instructions">
             <input type="submit" class="submit-button">
         </form>
-        <div class="fun-fact" id="fun-fact">
+        <div class="fun-fact hidden" id="fun-fact">
         </div>
     </main>
     <footer>This AI project is coded by <a href="https://github.com/nataliarodmo" target="_blank"> Natalia R</a> and it is <a href="https://github.com/nataliarodmo/fun-facts-generator.git" target="_blank">open-sourced on Github </a> and it is hosted on <a href="https://ai-fun-fact-generator-natalia-r.netlify.app/" target="_blank"> Netlify </a></footer>
